# PythonSCPI

./: CommandInterpreter.py  LICENSE  README.md  setup.cfg
SCPIParser/: CommandInterpreter.py  Makefile
SCPIParser/tests/: CommandInterpreter_test.py  context.py
src/SCPIParser/: CommandHandler.py  CommandInterpreter.py
src/scpiparser/: CommandInterpreter.py  HandlerMap.py  QueryHandler.py
tests/: CommandInterpreterTest.py  CommandInterpreter_test.py  HandlerMap_test.py  context.py
