[metadata]
name = SCPIParser
version = 0.0.1
author = Tom Biskupic
author_email = tom.biskupic@gmail.com
description = Simply library for parsing SCPI command language (for implementing SCPI devices)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tom-biskupic/PythonSCPI
project_urls =
    Bug Tracker = https://github.com/tom-biskupic/PythonSCPI/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
